
add_executable(1.bubbleSort 1.bubbleSort.cpp)
add_executable(2.insertSort 2.insertSort.cpp)
add_executable(3.shellSort 3.shellSort.cpp)
add_executable(4.1.selectSort 4.1.selectSort.cpp)
add_executable(4.2.heapSort 4.2.heapSort.cpp)
add_executable(5.mergeSort 5.mergeSort.cpp)
add_executable(6.quickSort 6.quickSort.cpp)